# articubot_one

./: README.md  package.xml
config/: main.rviz  map.rviz  mapper_params_online_async.yaml  ros_gz_bridge.yaml
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  sim.launch.py
worlds/: empty.world  obstacles.world
